# nodo_velo_bumped

./: README.md  nodo_bump_vel.cpp
prac1/src/: nodo_bump_vel.cpp
prac2/: CMakeLists.txt  nodo_scan.cpp  package.xml
prac2/src/: ScanGo.cpp  ScanGo.hpp  nodo_scan.cpp  scan.txt
